err/distributed-frontera.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/distributed_frontera'...
Listing './lib/python3.5/site-packages/distributed_frontera/backends'...
Listing './lib/python3.5/site-packages/distributed_frontera/backends/remote'...
Listing './lib/python3.5/site-packages/distributed_frontera/backends/remote/codecs'...
Compiling './lib/python3.5/site-packages/distributed_frontera/backends/remote/remote.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/backends/remote/remote.py", line 20
    print "Test Manager: ", msg
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/distributed_frontera/messagebus'...
Compiling './lib/python3.5/site-packages/distributed_frontera/messagebus/kafkabus.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/messagebus/kafkabus.py", line 61
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/distributed_frontera/messagebus/zeromq'...
Listing './lib/python3.5/site-packages/distributed_frontera/settings'...
Listing './lib/python3.5/site-packages/distributed_frontera/tests'...
Listing './lib/python3.5/site-packages/distributed_frontera/tests/0mq'...
Compiling './lib/python3.5/site-packages/distributed_frontera/tests/0mq/dbmock.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/tests/0mq/dbmock.py", line 28
    print "sl: %d, us: %d" % (sl_c, us_c)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distributed_frontera/tests/0mq/spidermock.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/tests/0mq/spidermock.py", line 24
    print c
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/distributed_frontera/tests/0mq/swmock.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/tests/0mq/swmock.py", line 21
    print c
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/distributed_frontera/worker'...
Compiling './lib/python3.5/site-packages/distributed_frontera/worker/main.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/worker/main.py", line 99
    except (KeyError, TypeError), e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distributed_frontera/worker/score.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/worker/score.py", line 49
    except (KeyError, TypeError), e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/distributed_frontera/worker/server.py'...
***   File "./lib/python3.5/site-packages/distributed_frontera/worker/server.py", line 99
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/distributed_frontera/worker/strategy'...
Listing './lib/python3.5/site-packages/distributed_frontera-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/frontera'...
Listing './lib/python3.5/site-packages/frontera/contrib'...
Listing './lib/python3.5/site-packages/frontera/contrib/backends'...
Listing './lib/python3.5/site-packages/frontera/contrib/backends/memory'...
Listing './lib/python3.5/site-packages/frontera/contrib/backends/remote'...
Listing './lib/python3.5/site-packages/frontera/contrib/backends/remote/codecs'...
Listing './lib/python3.5/site-packages/frontera/contrib/backends/sqlalchemy'...
Listing './lib/python3.5/site-packages/frontera/contrib/canonicalsolvers'...
Listing './lib/python3.5/site-packages/frontera/contrib/messagebus'...
Listing './lib/python3.5/site-packages/frontera/contrib/messagebus/kafka'...
Listing './lib/python3.5/site-packages/frontera/contrib/messagebus/zeromq'...
Listing './lib/python3.5/site-packages/frontera/contrib/middlewares'...
Listing './lib/python3.5/site-packages/frontera/contrib/requests'...
Listing './lib/python3.5/site-packages/frontera/contrib/scrapy'...
Listing './lib/python3.5/site-packages/frontera/contrib/scrapy/middlewares'...
Listing './lib/python3.5/site-packages/frontera/contrib/scrapy/middlewares/seeds'...
Listing './lib/python3.5/site-packages/frontera/contrib/scrapy/schedulers'...
Listing './lib/python3.5/site-packages/frontera/core'...
Listing './lib/python3.5/site-packages/frontera/logger'...
Listing './lib/python3.5/site-packages/frontera/logger/filters'...
Listing './lib/python3.5/site-packages/frontera/logger/formatters'...
Listing './lib/python3.5/site-packages/frontera/logger/handlers'...
Listing './lib/python3.5/site-packages/frontera/settings'...
Listing './lib/python3.5/site-packages/frontera/utils'...
Listing './lib/python3.5/site-packages/frontera/utils/graphs'...
Listing './lib/python3.5/site-packages/frontera/worker'...
Listing './lib/python3.5/site-packages/frontera/worker/strategies'...
Listing './lib/python3.5/site-packages/frontera-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/happybase'...
Listing './lib/python3.5/site-packages/happybase-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka/consumer'...
Listing './lib/python3.5/site-packages/kafka/coordinator'...
Listing './lib/python3.5/site-packages/kafka/coordinator/assignors'...
Listing './lib/python3.5/site-packages/kafka/metrics'...
Listing './lib/python3.5/site-packages/kafka/metrics/stats'...
Listing './lib/python3.5/site-packages/kafka/partitioner'...
Listing './lib/python3.5/site-packages/kafka/producer'...
Listing './lib/python3.5/site-packages/kafka/protocol'...
Listing './lib/python3.5/site-packages/kafka/serializer'...
Listing './lib/python3.5/site-packages/kafka/vendor'...
Listing './lib/python3.5/site-packages/kafka_python-1.3.5.dist-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/python_snappy-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/w3lib'...
Listing './lib/python3.5/site-packages/w3lib-1.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
